# tick

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DOCUMENTATION_COMPLETE.md  Makefile  README.md  cmake_install.cmake  features.md
.github/instructions/: code_base.instructions.md
docs/: CLOCK_MODES.md  LANGUAGE_GUIDE.md  api_reference.md  getting_started.md  index.md  language_reference.md  parallelism_guide.md  semi_compiled_architecture.md  tickcache_guide.md
examples/: README.md  calculator.tick  class_demo.tick  class_events.tick  class_parallel_patterns.tick  class_pipeline.tick  classes.tick  clock_speeds.tdl  complete.tick  counter  counter.cpp  counter.tdl  demo.tick  demo_parallelization.tdl  deterministic_accumulator  deterministic_accumulator.cpp  deterministic_accumulator.tdl  deterministic_pipeline  deterministic_pipeline.cpp  deterministic_pipeline.tdl  dsp  dsp.cpp  dsp.tdl  fibonacci  fibonacci.cpp  fibonacci.tdl  input_demo.tick  input_simple.tick  interactive.tick  math_lib.tick  max_speed  max_speed.cpp  max_speed.tdl  maxspeed  maxspeed.cpp  maxspeed.tdl  minimal  minimal.cpp  minimal.tdl  new_syntax_parallel.tick  (+26 more)
examples/advanced/: 01_large_parallel_sum.tdl  02_mixed_parallelism.tdl  03_recursive_computation.tdl  04_deterministic_state.tdl
examples/basics/: 01_hello_world.tdl  02_variables.tdl  03_if_else.tdl  04_while_loop.tdl  05_recursion.tdl  06_static_variables.tdl  07_strong_typing.tdl  08_type_safety_patterns.tdl  09_type_errors.tdl
src/: main.cpp
src/codegen/: codegen.cpp  codegen.h  codegen_new.cpp  codegen_new.h
src/compiler/: ast.cpp  ast.h  lexer.cpp  lexer.h  module_loader.cpp  module_loader.h  parser.cpp  parser.h  semantic_analyzer.cpp  semantic_analyzer.h  token.h  type_checker.cpp  type_checker.h
src/core/: dynamic_array.h  hash_map.h  string.h
src/runtime/: builtins.cpp  builtins.h  bytecode.h  cache.h  channel.cpp  channel.h  clock.cpp  clock.h  codegen.cpp  codegen.h  compiler.cpp  compiler.h  dependency_analyzer.cpp  dependency_analyzer.h  executor.cpp  executor.h  interpreter.cpp  interpreter.h  process.cpp  process.h  runtime.cpp  runtime.h  scheduler.cpp  scheduler.h  string_pool.cpp  string_pool.h  tick_runtime.c  tick_runtime.h
test/: README.md  core_features_test.sh  run_all_tests.sh  run_tests.sh  simple_test.sh
test/programs/: cache_test.tdl  test_addition.tdl  test_and.tdl  test_division.tdl  test_equal.tdl  test_greater_equal.tdl  test_greater_than.tdl  test_if_false.tdl  test_if_nested.tdl  test_if_true.tdl  test_less_equal.tdl  test_less_than.tdl  test_modulo.tdl  test_multiplication.tdl  test_negation.tdl  test_not.tdl  test_not_equal.tdl  test_or.tdl  test_precedence.tdl  test_precedence_parens.tdl  test_subtraction.tdl  test_while_simple.tdl  test_while_sum.tdl
test/tests/: cache.sh  control_flow.sh  functions.sh  operators.sh  performance.sh  variables.sh
tests/: CMakeLists.txt  TEST_SUMMARY.md  benchmark.cpp  perf_parallel.tick  perf_pipeline.tick  perf_sequential.tick  run_all_tests.sh  run_test_suite.sh  test_all.cpp  test_compiler.cpp  test_core.cpp  test_features.cpp  test_runtime.cpp
tests/suite/: README.md  test_arithmetic.tick  test_array_builtins.tick  test_array_params.tick  test_arrays.tick  test_basic_types.tick  test_bitwise.tick  test_block_comments.tick  test_cast_sizeof.tick  test_chained_access.tick  test_class_methods.tick  test_classes.tick  test_comparison.tick  test_complex_expressions.tick  test_compound_ops.tick  test_conditional_compile.tick  test_const.tick  test_continue.tick  test_control_flow.tick  test_defer.tick  test_double_type.tick  test_edge_cases.tick  test_else_if.tick  test_enum.tick  test_events.tick  test_extern.tick  test_fibonacci.tick  test_fixed_arrays.tick  test_for_loops.tick  test_functions.tick  test_gc.tick  test_import.tick  test_increment.tick  test_inheritance.tick  test_input.tick  test_interfaces.tick  test_logical.tick  test_mem_builtins.tick  test_memory_leaks.tick  test_multiline_string.tick  (+20 more)
tests/suite/modules/: test_import_module.tick
